# pazi_test

./: CMakeLists.txt  binomial.c  binomial.h  binomial_table.c  binomial_table.h  frequency.c  frequency.h  lengths.c  lengths.h  main.c  runs.c  runs.h
